--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Terry Kolody\\Miniconda3\\envs\\pyvit\\python.exe"
+    "python.pythonPath": "C:\\Users\\t_kol\\Miniconda3\\envs\\pocketcanscan\\python.exe"
 }
